# jlpt-vocab-builder

./: .gitignore  CLAUDE.md  README.md  SPEC.md  add_language_columns.py  add_words.py  build_jlpt_csv.py  dictionary.py  download.py  drop_words.py  furigana.py  generate_pitch_svgs.py  n5.csv  normalise.py  pitch_accent.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
jlpt_vocab/: csv_utils.py  dictionary.py  normalise.py  pipeline.py  pitch_accent.py
scripts/: __init__.py  add_language.py  add_words.py  build.py  dedup_words.py  drop_words.py  fix_furigana.py  generate_svgs.py  repair_pos.py
tests/: conftest.py  test_add_language_columns.py  test_add_words.py  test_build_pipeline.py  test_dedup_words.py  test_dictionary.py  test_download.py  test_drop_words.py  test_fix_furigana.py  test_furigana.py  test_generate_svgs.py  test_normalise.py  test_pitch_accent.py  test_repair_pos.py
