[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jlpt-vocab-builder"
version = "0.1.0"
requires-python = ">=3.12"
description = "Build a JLPT N4–N1 vocabulary CSV for Anki import"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31",
    "fugashi[unidic]>=1.3",
    "unidic-lite>=1.0",
    "tqdm>=4.66",
    "ollama>=0.2",
    "json-repair>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["jlpt_vocab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["requires_unidic: tests that need the full UniDic (python -m unidic download)"]
